--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 attrs == 21.2.0 
-bokeh @ file:///opt/concourse/worker/volumes/live/387ef85c-e237-4389-5b7e-afbe4f800f77/volume/bokeh_1620710043781/work
+bokeh == 2.3.2
 Brotli @ file:///opt/concourse/worker/volumes/live/6f34e4d0-4572-4e67-52c6-900349b58bc0/volume/brotli-split_1602517645446/work
 brotlipy==0.7.0
 certifi==2020.6.20
