--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 attrs == 21.2.0 
 bokeh == 2.3.2
-Brotli @ file:///opt/concourse/worker/volumes/live/6f34e4d0-4572-4e67-52c6-900349b58bc0/volume/brotli-split_1602517645446/work
+Brotli == 1.0.9
 brotlipy==0.7.0
 certifi==2020.6.20
 cffi @ file:///opt/concourse/worker/volumes/live/6ed3f91b-28f6-4d58-6a9b-7a5e864c6554/volume/cffi_1625814710543/work
