--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,89 @@
-attrs                    == 21.2.0               
-blas                     == 1.0                      
-bokeh                    == 2.3.2              
-brotli-python            == 1.0.9              
-brotlipy                 == 0.7.0             
-ca-certificates          == 2021.10.26             
-certifi                  == 2020.6.20            
-cffi                     == 1.14.6             
-charset-normalizer       == 2.0.4                
-click                    == 8.0.3                
-cloudpickle              == 2.0.0                
-colorcet                 == 2.0.6                
-contextvars              == 2.4                          
-cryptography             == 35.0.0             
-cycler                   == 0.11.0               
-cytoolz                  == 0.11.0             
-dash                     == 2.0.0                  
-dash-bootstrap-components== 1.0.1rc1                     
-dash-core-components     == 2.0.0                        
-dash-html-components     == 2.0.0                        
-dash-loading-spinners    == 0.1.0                        
-dash-renderer            == 1.9.0                        
-dash-table               == 5.0.0                        
-dask                     == 2021.3.0             
-dask-core                == 2021.3.0             
-dataclasses              == 0.8                  
-datashader               == 0.13.0               
-datashape                == 0.5.4              
-dbus                     == 1.13.18                
-decorator                == 5.1.0                
-distributed              == 2021.3.0           
-expat                    == 2.4.1                  
-flask                    == 2.0.2                
-flask-compress           == 1.10.1               
-freetype                 == 2.11.0                 
+attrs==21.2.0                                   
+bokeh== 2.3.2              
+Brotli== 1.0.9              
+brotlipy== 0.7.0                        
+certifi== 2020.6.20            
+cffi== 1.14.6                           
+click== 8.0.3                
+cloudpickle== 2.0.0                
+colorcet== 2.0.6                
+contextvars== 2.4                          
+cryptography== 35.0.0             
+cycler== 0.11.0               
+cytoolz== 0.11.0             
+dash== 2.0.0                  
+dash-bootstrap-components==1.0.1rc1                     
+dash-core-components== 2.0.0                        
+dash-html-components== 2.0.0                        
+dash-loading-spinners== 0.1.0                        
+dash-renderer== 1.9.0                        
+dash-table== 5.0.0                        
+dask== 2021.3.0                       
+dataclasses== 0.8                  
+datashader== 0.13.0               
+datashape== 0.5.4                          
+decorator== 5.1.0                
+distributed== 2021.3.0                          
+flask== 2.0.2                
+flask-compress== 1.10.1                             
 fsspec==2021.10.1            
-future                   == 0.18.2                     
-gettext                  == 0.21.0                 
-glib                     == 2.69.1                 
-gunicorn                 == 20.1.0             
-heapdict                 == 1.0.1                
-icu                      == 58.2                   
-idna                     == 3.3                  
-immutables               == 0.16               
-importlib-metadata       == 4.8.3                        
-ipython_genutils         == 0.2.0                
-itsdangerous             == 2.0.1                
-jinja2                   == 3.0.2                
-jpeg                     == 9d                     
-jsonschema               == 3.0.2                      
-jupyter_core             == 4.8.1              
-kiwisolver               == 1.3.1              
-lcms2                    == 2.12                   
-libcxx                   == 12.0.0                 
-libffi                   == 3.3                    
-libgfortran              == 3.0.1                  
-libiconv                 == 1.16                   
-libllvm10                == 10.0.1                 
-libopenblas              == 0.3.13                 
-libpng                   == 1.6.37                 
-libtiff                  == 4.2.0                  
-libwebp-base             == 1.2.0                  
-libxml2                  == 2.9.12                 
-llvm-openmp              == 12.0.0                 
-llvmlite                 == 0.36.0             
-locket                   == 0.2.1              
-lz4-c                    == 1.9.3                  
-markupsafe               == 2.0.1              
-matplotlib               == 3.3.4              
-matplotlib-base          == 3.3.4              
-msgpack-python           == 1.0.2              
-multipledispatch         == 0.6.0                      
-nbformat                 == 5.1.3                
-ncurses                  == 6.3                    
-numba                    == 0.53.1             
-numpy                    == 1.17.0             
-numpy-base               == 1.17.0             
-olefile                  == 0.46                       
-openjpeg                 == 2.4.0                  
-openssl                  == 1.1.1l                 
-packaging                == 21.3                 
-pandas                   == 1.1.5              
-param                    == 1.12.0               
-partd                    == 1.2.0                
-patsy                    == 0.5.1                      
-pcre                     == 8.45                   
-pillow                   == 8.3.1              
-pip                      == 21.2.2             
-plotly                   == 5.1.0                
-plotly_express           == 0.4.0                          
-psutil                   == 5.8.0              
-pycparser                == 2.21                 
-pyct                     == 0.4.8                      
-pyopenssl                == 21.0.0               
-pyparsing==3.0.4                
-pyqt==5.9.2              
+future== 0.18.2                     
+               
+gunicorn== 20.1.0             
+heapdict== 1.0.1                
+               
+idna== 3.3                  
+immutables== 0.16               
+importlib-metadata== 4.8.3                        
+ipython_genutils== 0.2.0                
+itsdangerous== 2.0.1                
+jinja2== 3.0.2                                  
+jsonschema== 3.0.2                      
+jupyter_core== 4.8.1              
+kiwisolver== 1.3.1                     
+llvmlite== 0.36.0             
+locket== 0.2.1                              
+markupsafe== 2.0.1              
+matplotlib== 3.3.4                          
+msgpack-python== 1.0.2              
+multipledispatch== 0.6.0                      
+nbformat== 5.1.3                                  
+numba== 0.53.1             
+numpy== 1.17.0                        
+olefile== 0.46                                      
+packaging== 21.3                 
+pandas== 1.1.5              
+param== 1.12.0               
+partd== 1.2.0                
+patsy== 0.5.1                                       
+pillow== 8.3.1                      
+plotly== 5.1.0                
+plotly_express== 0.4.0                          
+psutil== 5.8.0              
+pycparser== 2.21                 
+pyct== 0.4.8                      
+pyopenssl== 21.0.0               
+pyparsing==3.0.4                             
 pyrsistent==0.14.11            
-pysocks==1.7.1              
-python==3.6.13                 
-python-dateutil==2.8.2                
-python_abi==3.6                         
+pysocks==1.7.1                          
+python-dateutil==2.8.2                         
 pytz==2021.3               
 pyyaml==5.4.1              
-qt==5.9.7                  
-readline==8.1                    
 requests==2.26.0               
 retrying==1.3.3                      
-scipy==1.5.2              
-setuptools==58.0.4             
-sip==4.19.8             
+scipy==1.5.2                             
 six==1.15.0             
-sortedcontainers==2.4.0                
-sqlite==3.37.0                 
-statsmodels==0.12.2             
-tbb==2020.3                 
+sortedcontainers==2.4.0                              
+statsmodels==0.12.2                          
 tblib==1.7.0                
-tenacity==8.0.1              
-tk==8.6.11                 
+tenacity==8.0.1                            
 toolz==0.11.2               
 tornado==6.1                
 traitlets==4.3.3              
 typing-extensions==3.10.0.2               
 typing_extensions==3.10.0.2             
 urllib3==1.26.7               
-werkzeug==2.0.2                
-wheel==0.37.0               
-xarray==0.18.0               
-xz==5.2.5                  
-yaml==0.2.5                  
+werkzeug==2.0.2                             
+xarray==0.18.0                             
 zict==2.0.0                
-zipp==3.6.0                        
-zlib==1.2.11                 
-zstd==1.4.9                  
+zipp==3.6.0                                       
