--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,90 @@
-attrs==21.2.0                                   
-bokeh== 2.3.2              
-Brotli== 1.0.9              
-brotlipy== 0.7.0                        
-certifi== 2020.6.20            
-cffi== 1.14.6                           
-click== 8.0.3                
-cloudpickle== 2.0.0                
-colorcet== 2.0.6                
-contextvars== 2.4                          
-cryptography== 35.0.0             
-cycler== 0.11.0               
-cytoolz== 0.11.0             
-dash== 2.0.0                  
-dash-bootstrap-components==1.0.1rc1                     
-dash-core-components== 2.0.0                        
-dash-html-components== 2.0.0                        
-dash-loading-spinners== 0.1.0                        
-dash-renderer== 1.9.0                        
-dash-table== 5.0.0                        
-dask== 2021.3.0                       
-dataclasses== 0.8                  
-datashader== 0.13.0               
-datashape== 0.5.2                          
-decorator== 5.1.0                
-distributed== 2021.3.0                          
-flask== 2.0.2                
-flask-compress== 1.10.1                             
-fsspec==2021.10.1            
-future== 0.18.2                     
-               
-gunicorn== 20.1.0             
-heapdict== 1.0.1                
-               
-idna== 3.3                  
-immutables== 0.16               
-importlib-metadata== 4.8.3                        
-ipython_genutils== 0.2.0                
-itsdangerous== 2.0.1                
-jinja2== 3.0.2                                  
-jsonschema== 3.0.2                      
-jupyter_core== 4.8.1              
-kiwisolver== 1.3.1                     
-llvmlite== 0.36.0             
-locket== 0.2.1                              
-markupsafe== 2.0.1              
-matplotlib== 3.3.4                          
-msgpack-python== 1.0.2              
-multipledispatch== 0.6.0                      
-nbformat== 5.1.3                                  
-numba== 0.53.1             
-numpy== 1.17.0                        
-olefile== 0.46                                      
-packaging== 21.3                 
-pandas== 1.1.5              
-param== 1.12.0               
-partd== 1.2.0                
-patsy== 0.5.1                                       
-pillow== 8.3.1                      
-plotly== 5.1.0                
-plotly_express== 0.4.0                          
-psutil== 5.8.0              
-pycparser== 2.21                 
-pyct== 0.4.8                      
-pyopenssl== 21.0.0               
-pyparsing==3.0.4                             
-pyrsistent==0.14.11            
-pysocks==1.7.1                          
-python-dateutil==2.8.2                         
-pytz==2021.3               
-pyyaml==5.4.1              
-requests==2.26.0               
-retrying==1.3.3                      
-scipy==1.5.2                             
-six==1.15.0             
-sortedcontainers==2.4.0                              
-statsmodels==0.12.2                          
-tblib==1.7.0                
-tenacity==8.0.1                            
-toolz==0.11.2               
-tornado==6.1                
-traitlets==4.3.3              
-typing-extensions==3.10.0.2               
-typing_extensions==3.10.0.2             
-urllib3==1.26.7               
-werkzeug==2.0.2                             
-xarray==0.18.0                             
-zict==2.0.0                
-zipp==3.6.0                                       
+attrs==21.2.0
+bokeh==2.3.2
+Brotli==1.0.9
+brotlipy==0.7.0
+certifi==2020.6.20
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==8.0.3
+cloudpickle==2.0.0
+colorcet==2.0.6
+contextvars==2.4
+cryptography==35.0.0
+cycler==0.11.0
+cytoolz==0.11.0
+dash==2.0.0
+dash-bootstrap-components==1.0.1rc1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-loading-spinners==0.1.0
+dash-renderer==1.9.0
+dash-table==5.0.0
+dask==2021.3.0
+dataclasses==0.8
+datashader==0.13.0
+datashape==0.5.4
+decorator==5.1.0
+distributed==2021.3.0
+Flask==2.0.2
+Flask-Compress==1.10.1
+fsspec==2021.10.1
+future==0.18.2
+gunicorn==20.1.0
+HeapDict==1.0.1
+idna==3.3
+immutables==0.16
+importlib-metadata==4.8.3
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+Jinja2==3.0.2
+jsonschema==3.0.2
+jupyter-core==4.8.1
+kiwisolver==1.3.1
+llvmlite==0.36.0
+locket==0.2.1
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+msgpack==1.0.2
+multipledispatch==0.6.0
+nbformat==5.1.3
+numba==0.53.1
+numpy==1.17.0
+olefile==0.46
+packaging==21.3
+pandas==1.1.5
+param==1.12.0
+partd==1.2.0
+patsy==0.5.1
+Pillow==8.3.1
+pip==21.2.2
+plotly==5.1.0
+plotly-express==0.4.0
+psutil==5.8.0
+pycparser==2.21
+pyct==0.4.8
+pyOpenSSL==21.0.0
+pyparsing==3.0.4
+pyrsistent==0.14.11
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==5.4.1
+requests==2.26.0
+retrying==1.3.3
+scipy==1.5.2
+setuptools==58.0.4
+six==1.15.0
+sortedcontainers==2.4.0
+statsmodels==0.12.2
+tblib==1.7.0
+tenacity==8.0.1
+toolz==0.11.2
+tornado==6.1
+traitlets==4.3.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+wheel==0.37.0
+xarray==0.18.0
+zict==2.0.0
+zipp==3.6.0
