--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.html",
   "scripts": {
     "build": "node build.js",
-    "serve": "http-server dist -p 8000 -c-1 -o",
-    "deploy": "npm run build && gh-pages -d dist --dotfiles",
+    "serve": "http-server deploy -p 8000 -c-1 -o",
+    "deploy": "npm run build && npx gh-pages -d deploy --dotfiles --dest . --branch gh-pages-clean",
     "dev": "npm run build && npm run serve",
     "test": "node wasm-integration-test.js",
     "test:debug": "node wasm-integration-test.js --verbose"
